Make sure elm debugger isn't covered by modal

--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -31,6 +31,12 @@ button.button-disabled:hover {
 	background-color: white; 
 }
 
+/* For debug */
+
+.elm-overlay {
+	z-index: 1000;
+}
+
 /* Login button */
 
 .login {
